# hai-speech

./: .gitignore  LICENSE  README.md  demo-virtual-devices.html  智居自然语言服务请求说明 v1.0.md
hai-speech/: .clang-format  CMakeLists.txt  cmake.sh
hai-speech/app/: CMakeLists.txt  app.cpp  cloud.cpp  cloud.hpp
hai-speech/cmake/: CMakeLists.txt  cmake_build.cmake  cmake_toolchain.cmake  cmake_utility.cmake  toolchain-aarch64.cmake  toolchain-arm.cmake  toolchain-clang.cmake  toolchain-gcc.cmake  toolchain-mips.cmake  toolchain-riscv.cmake
hai-speech/configs/: base.hpp
hai-speech/ifly/: CMakeLists.txt
hai-speech/ifly/res/: wakeupresource.jet
hai-speech/speech/: recorder.hpp  speech.hpp  xfyun.hpp
